# fluon_wisski_training

./: .gitignore  .gitmodules  Makefile  Makefile.local  README.md  docker-compose.yaml.dev  docker-compose.yaml.prod  requirements.txt
cmd/: .env.dist  Dockerfile  Makefile  README.md  cron.sh  pyproject.toml  run.sh
cmd/cmd/: fetch.py  sample.py  sampling.py
cmd/cmd/graph/: __init__.py
cmd/cmd/proc_clustering/: Makefile  cluster_inspection.py  cluster_recommender.py  cluster_training.py
cmd/cmd/proc_fluidontologies/: sample_interactions.py  sample_profiles.py  trace_interactions.py
cmd/cmd/proc_fluidontologies/graph/: GraphSampler.py
cmd/cmd/proc_fluidontologies/refsrv/: __init__.py
cmd/cmd/proc_fluidontologies/utils/: __init__.py
cmd/cmd/refsrv/: __init__.py
cmd/patches/: Main.patch  helper.patch  load_data.patch  loader_base.patch
datasets/: fill_interactions.py
datasets/fluon_refsrv/: user_ids.tsv  user_interactions.tsv
datasets/wisski/: Makefile  entities_id.txt  items_id.txt  kg_final.txt  relations_id.txt  test.txt  train.txt
patches/: BPRMF.patch  CKE.patch  KGAT.patch  loader_base.patch
proc_clustering/: Makefile  cluster_recommender.py  cluster_training.py
proc_fluidontologies/: Makefile  sample_profiles.py  trace_interactions.py  user_interactions.tsv
proc_fo/: Makefile  sample_interactions.py  sample_profiles.py  trace_interactions.py
processing/: Makefile  interactions_sampler.py  profile_sampler.py  trace_interactions.py
processing/graph/: GraphSampler.py  __init__.py
processing/utils/: __init__.py
profile_sampler/: profile_sampler.py
recommendations/: argparser.py  inspect_cluster.py  recommend.py  train_cluster.py
server/: Dockerfile  pyproject.toml
server/server/: __init__.py  apiv1.py  default_settings.py
server/server/api/: v1.py
server/tests/: conftest.py  test_apiv1.py  test_factory.py  test_wsgi.py
(+11 files in other folders)
