[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Oliver Baumann", email = "oliver.baumann@uni-bayreuth.de" }
]
dependencies = [
    "flask>=3.0.3",
    "flask-restx>=1.3.0",
    "pyuwsgi>=2.0.23.post0",
]
readme = "README.md"
requires-python = ">= 3.8"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "pyflakes>=3.2.0",
    "autopep8>=2.3.1",
    "pytest>=8.3.1",
    "coverage>=7.6.0",
    "flake8-pytest-style>=2.0.0",
    "flake8>=7.1.0",
    "flake8-pyproject>=1.2.3",
    "pytest-testdox>=3.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "--testdox"
]

[tool.coverage.run]
branch = true
source = ["server"]

[tool.flake8]
exclude = [".venv", ".git", "__pycache__", "dist"]
pytest-fixture-no-parentheses = false
